[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.4.0"
rust-crypto = "0.2.36"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"
ed25519-dalek = { version = "1.0.0-pre.3", features = ["serde"] }
rand = "0.7.3"
pqcrypto-dilithium = "0.4.6"
pqcrypto-traits = "0.3.4"
hex="0.4.3"
