[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"
rust-crypto = "0.2.36"
pqcrypto-dilithium = "0.4.6"
pqcrypto-traits = "0.3.4"
hex="0.4.3"
web3 = "0.17.0"
chrono = "0.4"
tokio = { version= "1", features = ["full"] }
